[package]
name = "html_format"
version = "0.2.2"
edition = "2024"
description = "add macro html_format!()"
keywords = ["html", "format", "macro", "template"]
license = "MIT"
repository = "https://github.com/371tti/html_format"

[lib]
proc-macro = true

[dependencies]
syn   = { version = "2.0.101", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"